--- a/package.json
+++ b/package.json
@@ -4,12 +4,14 @@
   "type": "module",
   "devDependencies": {
     "@types/bun": "latest",
+    "@types/imap-simple": "^4.2.9",
     "@types/nodemailer": "^6.4.16"
   },
   "peerDependencies": {
     "typescript": "^5.0.0"
   },
   "dependencies": {
+    "imap-simple": "^5.1.0",
     "nodemailer": "^6.9.15"
   }
 }
